--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "http-middleware": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.14.2"
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
