--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@mui/x-data-grid": "^6.11.2",
     "http-middleware": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
