--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.11.2",
     "http-middleware": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.14.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
