--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-charts": "^6.0.0-alpha.9",
     "@mui/x-data-grid": "^6.11.2",
     "http-middleware": "^1.0.5",
     "react": "^18.2.0",
